Going through the css line by line.

--- a/README
+++ b/README
@@ -1,2 +1,12 @@
 
 Branch for new styling.
+
+Installation checklist:
+
+1. Copy social text into a text widget.
+2. Copy Facebook text into a text widget.
+3. Install Smooth Slider plugin.  Settings:
+ * ?
+ * ?
+4. 
+ 
